Update base template title and add content block; enhance requirements.txt with additional dependencies

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Mind Shaft Flash Cards</title>
 </head>
 <body>
 
+    {% block content %}{% endblock %}
+    
 </body>
 </html>
