--- a/flash_cards/templates/flash_cards/deck.html
+++ b/flash_cards/templates/flash_cards/deck.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="col-4 d-flex justify-content-center">
-                <a class="btn btn-success mb-3" href="{% url 'deck_cycle' %}?index={{ next_index }}">
+                <a class="btn btn-success mb-3" href="{% url 'deck' deck.id %}?index={{ next_index }}">
                     Next
                 </a>
             </div>
@@ -38,15 +38,19 @@
         </div>
         <div class="offcanvas-body">
             <div class="row">
+                <!-- Create a card for each card in the off-canvas -->
                 {% for card in cards %}
                     <div class="col-md-4 mb-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ card.name }}</h5>
+                        <a href="{% url 'deck' deck.id %}?index={{ forloop.counter0 }}" class="text-decoration-none">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ card.name }}</h5>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 {% endfor %}
+
             </div>
         </div>
     </div>
