Enhance deck card UI and implement global styling updates
Introduced global CSS variables for consistent styling and updated fonts. Refactored deck cards with a flip animation, improved data layout, and added creation date display. Adjusted HTML structure for better responsiveness and alignment.

--- a/flash_cards/templates/flash_cards/snippets/deck_card.html
+++ b/flash_cards/templates/flash_cards/snippets/deck_card.html
@@ -1,15 +1,28 @@
 {% load custom_filters %}
 
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title"><a href="{% url 'deck' deck.id %}">{{ deck.name }}</a></h5>
-        <div>
-            {% for keyword in deck.keywords|split:" " %}
-                <button type="button" class="btn btn-secondary btn-sm">
-                    {{ keyword|slugify }}
-                </button>
-            {% endfor %}
+<div class="card deck-card">
+    <div class="card-inner">
+        <div class="card-front">
+            <div class="card-body d-flex flex-column">
+                <h5 class="card-title"><a href="{% url 'deck' deck.id %}" class="stretched-link text-decoration-none text-reset">{{ deck.name }}</a></h5>
+                <div>
+                    {% for keyword in deck.keywords|split:" " %}
+                        <button type="button" class="btn btn-secondary btn-sm">
+                            {{ keyword|slugify }}
+                        </button>
+                    {% endfor %}
+                </div>
+                <p class="card-text mt-auto"><small>Contains {{ deck.card_count }} cards</small></p>
+            </div>
         </div>
-        <p class="card-text"><small>Contains {{ deck.card_count }} cards</small></p>
+        <div class="card-back">
+            <div class="card-body d-flex flex-column h-100">
+                <h5 class="card-title"><a href="{% url 'deck' deck.id %}" class="stretched-link text-reset text-decoration-none">{{ deck.name }}</a></h5>
+                <div>
+                    <p>Created on: {{ deck.date_created|date:"F j, Y" }}</p>
+                </div>
+                <p class="card-text mt-auto"><small>Contains {{ deck.card_count }} cards</small></p>
+            </div>
+        </div>
     </div>
 </div>
