--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-light text-center text-lg-start fixed-bottom">
+<footer class="bg-light text-center text-lg-start py-3 mt-auto">
     <div class="container py-4">
         <div class="row">
             <!-- Column 1: Contact Us -->
