--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -1,13 +1,13 @@
 {% load static %}
 
 <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top align-items-center">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top d-flex align-items-center">
             <div class="container-fluid">
                 <!-- Site Icon -->
                 <a class="navbar-brand" href="#">
                     <img src="{% static 'images/site_icon.png' %}" alt="Site Icon" width="60" height="60" class="d-inline-block align-text-top">
                 </a>
-                <h1 class="navbar-brand">MindShaft</h1>
+                <h1 class="navbar-brand my-0">MindShaft</h1>
                 <!-- Navbar Home and Toggler -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
