--- a/flash_cards/templates/flash_cards/index.html
+++ b/flash_cards/templates/flash_cards/index.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}
     My Flashcard Decks
 {% endblock %}
 
 {% block content %}
-    <div class="container mt-5">
-
-        
+    <div class="container my-5">
 
         <!-- Row for User Decks -->
 
