--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,72 @@
+/* Global Styles */
+@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
+:root {
+    --primary-font: Martian Mono, sans-serif;
+    --secondary-font: Nunito, serif;
+    --primary-color: #25283dff;
+    --secondary-color: #b7c6ccff;
+    --tertiary-color: #fdfffcff;
+    --accent-color: #91cb3eff;
+    --accent-color-dark: #d90866ff;
+}
 
 /* Body Styling*/
 
+body {
+    font-family: var(--secondary-font), serif;
+    color: var(--primary-color);
+    background-color: var(--tertiary-color);
+}
+
+header, footer {
+    background-color: var(--secondary-color);
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: var(--primary-font), sans-serif;
+}
 
 /* Footer */
 
+
+/* Deck Cards */
+
+.deck-card {
+    background-color: var(--tertiary-color);
+    border: none;
+    border-radius: 0px;
+    height: 250px;
+    width: 200px;
+    perspective: 1000px;
+}
+
+.card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d; /* Allow 3D transforms */
+    transition: transform 0.6s;   /* Smooth flip animation */
+}
+
+/* The front and back faces of the card */
+.card-front, .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden; /* Hide the back face when flipped */
+}
+
+.card-front {
+    background-color: var(--secondary-color); /* White for the front of the card */
+    display: flex;}
+
+.card-back {
+    background-color: var(--accent-color-dark); /* Blue for the back of the card */
+    color: var(--tertiary-color);
+    transform: rotateY(180deg);
+}
+
+/* Flip effect on hover */
+.deck-card:hover .card-inner {
+    transform: rotateY(180deg);}
