--- a/flash_cards/templates/flash_cards/snippets/deck_card.html
+++ b/flash_cards/templates/flash_cards/snippets/deck_card.html
@@ -37,7 +37,7 @@
                             <span class="material-icons">delete</span>
                         </a>
                 </div>
-                <p class="card-text mt-auto"><small>Contains {{ deck.card_count }} cards</small></p>
+                <p class="card-text"><small>Contains {{ deck.card_count }} cards</small></p>
             </div>
         </div>
     </div>
