Create deck, edit deck, delete deck

--- a/flash_cards/templates/flash_cards/snippets/card_content.html
+++ b/flash_cards/templates/flash_cards/snippets/card_content.html
@@ -17,7 +17,7 @@
                 </a>
 
                 <!-- Delete Icon -->
-                <a href="#" class="text-danger" onclick="confirmDeletion({{ deck.id }}, {{ current_card.id }})" title="Delete Card">
+                <a href="#" class="text-danger" onclick="confirmCardDeletion({{ deck.id }}, {{ current_card.id }})" title="Delete Card">
                     <span class="material-icons">
                         delete
                     </span>
