--- a/flash_cards/templates/flash_cards/deck.html
+++ b/flash_cards/templates/flash_cards/deck.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load custom_filters %}
 
 {% block title %}
     {{ deck.name }}
@@ -12,11 +13,11 @@
             <h1 class="text-center">{{ deck.name }}</h1>
         </div>
         <div class="row justify-content-center mt-3">
-            <div class="col-4 d-flex justify-content-center">
+            <div class="col-3 d-flex justify-content-center">
                 <a href="{% url 'index' %}" class="btn btn-secondary mb-3">Home</a>
             </div>
 
-            <div class="col-4 d-flex justify-content-center">
+            <div class="col-3 d-flex justify-content-center">
                 <button class="btn btn-primary mb-3" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasDeck"
                         aria-controls="offcanvasDeck">
@@ -24,7 +25,11 @@
                 </button>
             </div>
 
-            <div class="col-4 d-flex justify-content-center">
+            <div class="col-3 d-flex justify-content-center">
+                <a class="btn btn-primary mb-3" href="{% url 'edit_deck' deck.id %}">Edit Deck</a>
+            </div>
+
+            <div class="col-3 d-flex justify-content-center">
                 <a class="btn btn-success mb-3" href="{% url 'deck' deck.id %}?index={{ next_index }}">
                     Next
                 </a>
