--- a/flash_cards/templates/flash_cards/create_deck.html
+++ b/flash_cards/templates/flash_cards/create_deck.html
@@ -21,7 +21,7 @@
     <form action="{% url 'insert_deck'%}" method="POST">
         {% csrf_token %}
         <p>Name</p>
-        <input type="text" placeholder="Deck Name.." name="title"></input>
+        <input type="text" placeholder="Deck Name.." name="name"></input>
         <p>Keywords</p>
         <input placeholder="Deck Keywords.." name="keywords"></input>
         <button type="submit" class="btn-save" aria-label="Save">Save</button>
