--- a/flash_cards/templates/flash_cards/edit_deck.html
+++ b/flash_cards/templates/flash_cards/edit_deck.html
@@ -17,11 +17,14 @@
         <div class="col-3 d-flex justify-content-center">
             <a href="{% url 'index' %}" class="btn btn-secondary mb-3">Home</a>
         </div>
+        <div class="col-3 d-flex justify-content-center">
+            <a href="{% url 'add_card' deck.id %}" class="btn btn-primary mb-3">Add Card</a>
+        </div>
     </div>
     <form action="{% url 'update_deck' deck.id %}" method="POST">
         {% csrf_token %}
         <p>Title</p>
-        <input type="text" placeholder="{{deck.name}}" name="title"></input>
+        <input type="text" placeholder="{{deck.name}}" name="name"></input>
         <p>Keywords</p>
         <input placeholder="{{deck.keywords}}" name="keywords"></input>
         <button type="submit" class="btn-save" aria-label="Save">Save</button>
