--- a/flash_cards/templates/flash_cards/snippets/card_content.html
+++ b/flash_cards/templates/flash_cards/snippets/card_content.html
@@ -1,5 +1,5 @@
 <div class="container col-12 col-md-6">
-    <div class="card">
+    <div class="card card-insert-container">
         <div class="card-body d-flex justify-content-between align-items-center">
             <!-- Card Name on the Left -->
             <h5 class="card-title mb-0">
@@ -10,14 +10,14 @@
             <div>
                 <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
                 <!-- Edit Icon -->
-                <a href="{% url 'edit_card' deck.id current_card.id %}" class="text-primary me-3" title="Edit Card">
+                <a href="{% url 'edit_card' deck.id current_card.id %}" class="card-icon me-3" title="Edit Card">
                     <span class="material-icons">
                         edit
                     </span>
                 </a>
 
                 <!-- Delete Icon -->
-                <a href="#" class="text-danger" onclick="confirmCardDeletion({{ deck.id }}, {{ current_card.id }})" title="Delete Card">
+                <a href="#" class="card-icon" onclick="confirmCardDeletion({{ deck.id }}, {{ current_card.id }})" title="Delete Card">
                     <span class="material-icons">
                         delete
                     </span>
@@ -26,8 +26,8 @@
         </div>
         <!-- Card Image -->
         <div class="card-img-top text-center">
-            {% if current_card.image %}
-                <img src="{{ current_card.image.url }}" alt="{{ current_card.name }}" class="img-fluid">
+            {% if current_card.card_image %}
+                <img src="{{ current_card.card_image }}" alt="{{ current_card.name }}" class="img-fluid card-image">
             {% else %}
             {% endif %}
         </div>
