--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -21,13 +21,13 @@
             <div class="col-lg-4 col-md-12 mb-4 mb-md-0 text-end">
                 <h5 class="text-uppercase">Follow Us</h5>
                 <a href="https://www.facebook.com" class="me-3" target="_blank">
-                    <img src="" alt="Facebook" width="24" height="24">
+                    <i class="fa-brands fa-square-facebook"></i>
                 </a>
                 <a href="https://www.twitter.com" class="me-3" target="_blank">
-                    <img src="" alt="Twitter" width="24" height="24">
+                    <i class="fa-brands fa-square-x-twitter"></i>
                 </a>
                 <a href="https://www.instagram.com" target="_blank">
-                    <img src="" alt="Instagram" width="24" height="24">
+                    <i class="fa-brands fa-square-instagram"></i>
                 </a>
             </div>
         </div>
