--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 {% include "snippets/header.html" %}
 
-<main class="flex-grow-1">
+<main class="d-flex flex-column flex-grow-1">
 
 {% block content %}
 
