--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -18,7 +18,7 @@
             </div>
 
             <!-- Column 3: Social Media Links -->
-            <div class="col-lg-4 col-md-12 mb-4 mb-md-0 text-end">
+            <div class="col-lg-4 col-md-12 mb-4 mb-md-0 text-end social-media-links">
                 <h5 class="text-uppercase">Follow Us</h5>
                 <a href="https://www.facebook.com" class="me-3" target="_blank">
                     <i class="fa-brands fa-square-facebook"></i>
