--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,8 +27,40 @@ h1,h2,h3,h4,h5,h6 {
     font-family: var(--primary-font), sans-serif;
 }
 
+/* Landing Page */
+
+.hero-image {
+    background-image: url('/static/images/hero_img.jpeg');
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.hero-text * {
+    color: var(--primary-color);
+    border-radius: 15px;
+}
+
+.hero-text {
+    background-color: rgba(183, 198, 204, 0.3);
+}
+
 /* Footer */
 
+.fa-brands {
+    color: var(--accent-color-dark);
+    text-decoration: none;
+    font-size: 2rem;
+}
+
+.fa-brands:hover {
+    color: var(--accent-color);
+}
+
+.social-media-links * {
+    text-decoration: none;
+}
 
 /* Index page */
 
