--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,10 +6,10 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h2 class="text-center mb-4">{% trans "Sign Up" %}</h2>
-            <form method="post" action="{% url 'account_signup' %}">
+            <form method="post" action="{% url 'account_signup' %}" class="text-center my-3">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit" class="btn btn-primary w-100">{% trans "Sign Up" %}</button>
+                <button type="submit" class="btn create-btn w-100">{% trans "Sign Up" %}</button>
             </form>
             <p class="text-center mt-3">
                 {% trans "Already have an account?" %}
